# cpp-class-assignments

./: CMakeLists.txt  README.md
class-management-system/: .gitignore  CMakeLists.txt  Makefile  README.md
class-management-system/src/: Controller.cpp  Controller.h  Login.cpp  Login.h  View.cpp  View.h  class_manager.cpp  functions.h  grade.cpp  grade.h  main.cpp  system.cpp  system.h
class-management-system/src/basic/: stdafx.cpp  stdafx.h  student.cpp  student.h
class-management-system/src/models/: GradeTable.cpp  GradeTable.h  Student.cpp  Student.h  SystemConfiguration.cpp  SystemConfiguration.h
gomoku-console/: .gitignore  CMakeLists.txt  Makefile  README.md  stonePos.txt
gomoku-console/doc/: UML.md
gomoku-console/src/: Game.cpp  GameController.cpp  GameController.h  GameData.cpp  GameData.h  GameView.cpp  GameView.h  Gomoku.cpp  Grid.cpp  Grid.h  Player.cpp  Player.h  pch.h
src/: Game.cpp  Game.h  GameController.cpp  GameController.h  GameData.cpp  GameData.h  GameView.cpp  GameView.h  Gomoku.cpp  Player.cpp  functions.h  grade.cpp  pch.h  system.cpp
src/basic/: stdafx.cpp  stdafx.h  student.h
